feat: подписаться на контекст currentUser

--- a/src/blocks/card/__trash/card__trash.css
+++ b/src/blocks/card/__trash/card__trash.css
@@ -7,4 +7,5 @@
     background-image: url(../../../images/trash_icon.svg);
     background-size: cover;
     background-color: rgba(0, 0, 0, 0);
+    display: none;
 }
